# loomrv

./: .dockerignore  .gitignore  BENCHMARKS.md  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-entrypoint.sh  minTimes_dense.txt  minTimes_discrete.txt
benchmarks/: CMakeLists.txt  benchmark_engine.cpp  benchmark_interval_set.cpp  benchmark_multi_property.cpp
include/loomrv/: MTLEngine.hpp  binary_feeder.hpp  binary_row_reader.hpp  interval_set.hpp  json_feeder.hpp  json_reader.hpp  ptl.hpp  ptl_grammar.hpp
loomrv-misc/: .gitignore  benchmark_settings.txt  benchmark_synthetic_binary_dense.sh  benchmark_synthetic_binary_discrete.sh  benchmark_synthetic_dense.sh  benchmark_synthetic_discrete.sh  commands.txt  discrete-results.txt  loomrv-benchmark-dense-binary.sh  loomrv-benchmark-dense-multi-and-binary.sh  loomrv-benchmark-dense-multi-and.sh  loomrv-benchmark-dense-multi-binary.sh  loomrv-benchmark-dense-multi.sh  loomrv-benchmark-dense-single-binary.sh  loomrv-benchmark-dense-single-seq.sh  loomrv-benchmark-dense.sh  loomrv-benchmark.sh  loomrv-discrete-benchmark-bin.sh  loomrv-discrete-benchmark-json.sh  loomrv-discrete-benchmark-multi-and-binary.sh  loomrv-discrete-benchmark-multi-and.sh  loomrv-discrete-benchmark-multi-binary.sh  loomrv-discrete-benchmark-multi.sh  loomrv-discrete-benchmark-single-binary.sh  loomrv-discrete-benchmark-single-seq.sh  results.txt  run_all_dense_benchmarks.sh  run_all_discrete_benchmarks.sh  run_rybinx_seq.sh  run_rybinx_single.sh  run_ryjson_seq.sh  run_ryjson_single.sh  rybinx-benchmark-dense-multi-and.sh  rybinx-benchmark-dense-multi.sh  rybinx-benchmark-dense.sh  rybinx-discrete-benchmark-multi-and.sh  rybinx-discrete-benchmark-multi.sh  rybinx-discrete-benchmark.sh  ryjson-benchmark-dense-multi-and.sh  ryjson-benchmark-dense-multi.sh  (+5 more)
loomrv-misc/tools/: extract_min_times.py  generate_test_formulas.py  generate_traces.py  to_binary_row.py
results/2026-05-01_23-08-06/: bench_best_case_shared_core_10props_1000000ev_f9a2351551f96b079ac23148a4ff95c8617bc495.json  bench_binary_best_case_shared_core_10props_1000000ev_f9a2351551f96b079ac23148a4ff95c8617bc495.json  bench_binary_nested_best_case_10props_1000000ev_f9a2351551f96b079ac23148a4ff95c8617bc495.json  bench_binary_nested_worst_case_10props_1000000ev_f9a2351551f96b079ac23148a4ff95c8617bc495.json  bench_binary_worst_case_unique_leaves_10props_1000000ev_f9a2351551f96b079ac23148a4ff95c8617bc495.json  bench_nested_best_case_10props_1000000ev_f9a2351551f96b079ac23148a4ff95c8617bc495.json  bench_nested_worst_case_10props_1000000ev_f9a2351551f96b079ac23148a4ff95c8617bc495.json  bench_worst_case_unique_leaves_10props_1000000ev_f9a2351551f96b079ac23148a4ff95c8617bc495.json  loomrv-benchmark-dense-binary.sh".f9a2351551f96b079ac23148a4ff95c8617bc495.results.json  loomrv-benchmark-dense-multi-and-binary.sh".f9a2351551f96b079ac23148a4ff95c8617bc495.results.json  loomrv-benchmark-dense-multi-and.sh".f9a2351551f96b079ac23148a4ff95c8617bc495.results.json  loomrv-benchmark-dense-multi-binary.sh".f9a2351551f96b079ac23148a4ff95c8617bc495.results.json  loomrv-benchmark-dense-multi.sh".f9a2351551f96b079ac23148a4ff95c8617bc495.results.json  loomrv-benchmark-dense-single-binary.sh".f9a2351551f96b079ac23148a4ff95c8617bc495.results.json  loomrv-benchmark-dense-single-seq.sh".f9a2351551f96b079ac23148a4ff95c8617bc495.results.json  loomrv-benchmark-dense.sh".f9a2351551f96b079ac23148a4ff95c8617bc495.results.json  rybinx-benchmark-dense-multi-and.sh".f9a2351551f96b079ac23148a4ff95c8617bc495.results.json  rybinx-benchmark-dense-multi.sh".f9a2351551f96b079ac23148a4ff95c8617bc495.results.json  rybinx-benchmark-dense.sh".f9a2351551f96b079ac23148a4ff95c8617bc495.results.json  ryjson-benchmark-dense-multi-and.sh".f9a2351551f96b079ac23148a4ff95c8617bc495.results.json  ryjson-benchmark-dense-multi.sh".f9a2351551f96b079ac23148a4ff95c8617bc495.results.json  ryjson-benchmark-dense.sh".f9a2351551f96b079ac23148a4ff95c8617bc495.results.json
results/2026-05-02_00-58-23/: bench_binary_discrete_best_case_shared_core_10props_1000000ev_f9a2351551f96b079ac23148a4ff95c8617bc495.json  bench_binary_discrete_nested_best_case_10props_1000000ev_f9a2351551f96b079ac23148a4ff95c8617bc495.json  bench_binary_discrete_nested_worst_case_10props_1000000ev_f9a2351551f96b079ac23148a4ff95c8617bc495.json  bench_binary_discrete_worst_case_unique_leaves_10props_1000000ev_f9a2351551f96b079ac23148a4ff95c8617bc495.json  bench_discrete_best_case_shared_core_10props_1000000ev_f9a2351551f96b079ac23148a4ff95c8617bc495.json  bench_discrete_nested_best_case_10props_1000000ev_f9a2351551f96b079ac23148a4ff95c8617bc495.json  bench_discrete_nested_worst_case_10props_1000000ev_f9a2351551f96b079ac23148a4ff95c8617bc495.json  bench_discrete_worst_case_unique_leaves_10props_1000000ev_f9a2351551f96b079ac23148a4ff95c8617bc495.json  loomrv-discrete-benchmark-bin.sh".f9a2351551f96b079ac23148a4ff95c8617bc495.results.json  loomrv-discrete-benchmark-json.sh".f9a2351551f96b079ac23148a4ff95c8617bc495.results.json  loomrv-discrete-benchmark-multi-and-binary.sh".f9a2351551f96b079ac23148a4ff95c8617bc495.results.json  loomrv-discrete-benchmark-multi-and.sh".f9a2351551f96b079ac23148a4ff95c8617bc495.results.json  loomrv-discrete-benchmark-multi-binary.sh".f9a2351551f96b079ac23148a4ff95c8617bc495.results.json  loomrv-discrete-benchmark-multi.sh".f9a2351551f96b079ac23148a4ff95c8617bc495.results.json  loomrv-discrete-benchmark-single-binary.sh".f9a2351551f96b079ac23148a4ff95c8617bc495.results.json  loomrv-discrete-benchmark-single-seq.sh".f9a2351551f96b079ac23148a4ff95c8617bc495.results.json  rybinx-discrete-benchmark-multi-and.sh".f9a2351551f96b079ac23148a4ff95c8617bc495.results.json  (+5 more)
src/: MTLEngine.cpp  binary_feeder.cpp  binary_row_reader.cpp  check_grammar.cpp  count_nodes.cpp  interval_set.cpp  json_feeder.cpp  json_read_main.cpp  json_reader.cpp  main.cpp  main_perf.cpp  test_parse.cpp
tests/: CMakeLists.txt  test_dense.cpp  test_discrete.cpp  test_interval_set.cpp  test_json_input.cpp  test_parse.cpp  test_readers.cpp
